# eml-header-analyzer

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md
src/eml_header_analyzer/: __init__.py  cli.py  parser.py
tests/: test_parser.py
tests/data/: sample1.eml
