[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-header-analyzer"
version = "0.1.0"
description = "Parse EML message headers and report the Received chain and authentication results."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Leena Taylor Paul" }]
keywords = ["email", "forensics", "eml", "headers", "received", "dkim", "spf", "dmarc"]
classifiers = [
  "Development Status :: 3 - Alpha",
    "Environment :: Console",
      "Intended Audience :: Information Technology",
        "License :: OSI Approved :: MIT License",
          "Operating System :: OS Independent",
            "Programming Language :: Python :: 3",
              "Programming Language :: Python :: 3.10",
                "Programming Language :: Python :: 3.11",
                  "Programming Language :: Python :: 3.12",
                    "Topic :: Communications :: Email",
                      "Topic :: Security",
                      ]
                      dependencies = []

                      [project.urls]
                      Homepage = "https://github.com/leenadesq/eml-header-analyzer"
                      Issues = "https://github.com/leenadesq/eml-header-analyzer/issues"

                      [project.scripts]
                      eml-header-analyzer = "eml_header_analyzer.cli:main"

                      [tool.setuptools.packages.find]
                      where = ["src"]

                      [tool.setuptools.package-dir]
                      "" = "src"
                      
